Bug 1833810 - Speedup origin directory iteration when full origin metadata is not needed; r=hsingh

Differential Revision: https://phabricator.services.mozilla.com/D178419